Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26420

tst_QWidget::windowState is failing

    XMLWordPrintable

Details

    • 84e84b507cd6c1bf40cdc52429e38323dc1a4205

    Description

      When setting the window state (Fullscreen | minimized), then the event handler in qwidget_qpa.cpp sets the widget's window state to (minimized).
      Also the fullscreen state gets lost later on.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            jbornema Joerg Bornemann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes