src/widgets/kernel/qwidgetwindow.cpp
@@ -526,14 +526,12 @@ void QWidgetWindow::handleWindowStateChangedEvent(QWindowStateChangeEvent *event
         if (effectiveState(widgetState) == Qt::WindowNoState)
             if (QTLWExtra *tle = m_widget->d_func()->maybeTopData())
                 tle->normalGeometry = m_widget->geometry();
-        widgetState &= ~Qt::WindowFullScreen;
         widgetState |= Qt::WindowMaximized;
         break;
     case Qt::WindowFullScreen:
         if (effectiveState(widgetState) == Qt::WindowNoState)
             if (QTLWExtra *tle = m_widget->d_func()->maybeTopData())
                 tle->normalGeometry = m_widget->geometry();
-        widgetState &= ~Qt::WindowMaximized;
         widgetState |= Qt::WindowFullScreen;
         break;
     case Qt::WindowActive: // Not handled by QWindow
